pushing some updates

--- a/flaskapp_portfolio/templates/index.html
+++ b/flaskapp_portfolio/templates/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/fontawesome-all.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/ionicons.min.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Social-Icons-1.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Social-Icons.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
@@ -23,7 +24,7 @@
                 <div class="col">
                     <div class="text-center">
                         <figure class="figure">
-                            <div class="social-icons"><i class="icon ion-briefcase bounce animated"></i></div>
+                            <div class="social-icons"><i class="icon ion-briefcase shadow-none bounce animated"></i></div>
                             <h3 class="text-dark rubberBand animated">GIORGI KOCHIASHVILI</h3>
                         </figure>
                     </div>
@@ -32,10 +33,10 @@
             <div class="row mb-3">
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12" style="border-right-style: none;border-bottom-style: none;"><a class="link-dark main_header_links" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapse_projects" data-bs-target="#collapse_projects" href="#">
                         <div class="text-center mb-2">
-                            <h5><span class="text-center px-4 py-1" style="border-bottom-width: 4px;border-bottom-style: solid;">PROJECTS</span></h5>
+                            <h5><span class="text-center px-4 py-1" style="border-bottom-width: 3px;border-bottom-style: solid;">PROJECTS</span></h5>
                         </div>
                     </a></div>
-                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 mb-4 collapse" id="collapse_projects" style="border-bottom-style: dashed;border-bottom-color: var(--bs-gray);">
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 mb-4 collapse" id="collapse_projects">
                     <div class="row mb-4 mt-4">
                         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6 mb-3 mt-3">
                             <div class="card shadow">
@@ -166,10 +167,10 @@
             <div class="row mb-3">
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12" style="border-bottom-style: none;"><a class="link-dark main_header_links" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapse_education" data-bs-target="#collapse_education" href="#">
                         <div class="text-center mb-2">
-                            <h5><span class="text-center px-4 py-1" style="border-bottom-width: 4px;border-bottom-style: solid;">EDUCATION</span></h5>
+                            <h5><span class="text-center px-4 py-1" style="border-bottom-width: 3px;border-bottom-style: solid;">EDUCATION</span></h5>
                         </div>
                     </a></div>
-                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-10 col-xxl-10 offset-xl-1 offset-xxl-1 mb-4 collapse" id="collapse_education" style="border-bottom-style: dashed;border-bottom-color: var(--bs-gray);">
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-10 col-xxl-10 offset-xl-1 offset-xxl-1 mb-4 collapse" id="collapse_education">
                     <div class="row mb-4 mt-4">
                         <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 mb-4">
                             <div class="card border-warning shadow">
@@ -190,6 +191,20 @@
                                 </div>
                                 <div class="card-footer text-center text-white bg-primary border-primary p-1"><small>2011 - 2013</small></div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12" style="border-bottom-style: none;"><a class="link-dark main_header_links" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapse_contact" data-bs-target="#collapse_contact" href="#">
+                        <div class="text-center mb-2">
+                            <h5><span class="text-center px-4 py-1" style="border-bottom-width: 3px;border-bottom-style: solid;">CONTACT</span></h5>
+                        </div>
+                    </a></div>
+                <div class="col-sm-12 col-md-12 col-lg-12 col-xl-10 col-xxl-10 offset-xl-1 offset-xxl-1 mb-4 collapse" id="collapse_contact">
+                    <div class="row mb-4 mt-4">
+                        <div class="col mb-4">
+                            <div class="social-icons-contact"><a href="#" target="_blank"><i class="icon ion-social-linkedin shadow"></i></a><a href="#" target="_blank"><i class="icon ion-social-github shadow"></i></a><a href="#" target="_blank"><i class="icon ion-social-instagram shadow"></i></a><a href="#"></a></div>
                         </div>
                     </div>
                 </div>
