--- a/flaskapp_portfolio/static/css/Social-Icons-1.css
+++ b/flaskapp_portfolio/static/css/Social-Icons-1.css
@@ -1,8 +1,8 @@
 .social-icons {
   color: #313437;
-  /*background-color: #fff;*/
+  background-color: #fff;
   text-align: center;
-  /*padding: 70px 0;*/
+  padding: 70px 0;
 }
 
 @media (max-width:767px) {
@@ -14,7 +14,7 @@
 .social-icons i {
   font-size: 32px;
   display: inline-block;
-  color: #696969;
+  color: #757980;
   margin: 0 10px;
   width: 60px;
   height: 60px;
