--- a/flaskapp_portfolio/static/css/styles.css
+++ b/flaskapp_portfolio/static/css/styles.css
@@ -2,3 +2,23 @@
   text-decoration: none !important;
 }
 
+.social-icons-contact {
+  color: #313437;
+  background-color: #fff;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.social-icons-contact i {
+  font-size: 25px;
+  display: inline-block;
+  color: #000000;
+  margin: 0 10px;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #696969;
+  text-align: center;
+  border-radius: 50%;
+  line-height: 50px;
+}
+
